// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders correctly 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 button link MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-4"
        >
          <span
            class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders correctly only one item 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  />
</nav>
`;

exports[`Breadcrumbs component renders dark themed correctly 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-text buttonStyles-text-21 buttonStyles-textDarkBg-25 button link MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-23"
        >
          <span
            class="MuiButton-startIcon buttonStyles-startIcon-24 MuiButton-iconSizeMedium"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
          </span>
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders on a large breakpoint 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 button link MuiButton-textPrimary"
        href="/"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-61"
        >
          <span
            class="label"
          >
            BMI Group
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 button link MuiButton-textPrimary"
        href="/products"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-61"
        >
          <span
            class="label"
          >
            Products
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 button link MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-61"
        >
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <button
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-58 MuiButton-text buttonStyles-text-59 buttonStyles-textDarkBg-63 button MuiButton-textPrimary Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label buttonStyles-label-61"
        >
          <span>
            Concrete Tiles
          </span>
        </span>
      </button>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs component renders on a small breakpoint 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs Breadcrumbs--dark-themed MuiTypography-body1 MuiTypography-colorTextSecondary"
>
  <ol
    class="MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 buttonStyles-textDarkBg-44 button link MuiButton-textPrimary"
        href="/"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-42"
        >
          <span
            class="label"
          >
            BMI Group
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 buttonStyles-textDarkBg-44 button link MuiButton-textPrimary"
        href="/products"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-42"
        >
          <span
            class="label"
          >
            Products
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 buttonStyles-textDarkBg-44 button link MuiButton-textPrimary"
        href="/tiles"
        tabindex="0"
      >
        <span
          class="MuiButton-label buttonStyles-label-42"
        >
          <span
            class="label"
          >
            Tiles
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <button
        class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 buttonStyles-textDarkBg-44 button MuiButton-textPrimary Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label buttonStyles-label-42"
        >
          <span>
            Concrete Tiles
          </span>
        </span>
      </button>
    </li>
  </ol>
</nav>
`;
